--- a/tileprogressview/src/main/res/values/colors.xml
+++ b/tileprogressview/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="white">#FFFFFFFF</color>
-    <color name="purple">#694DF8</color>
+    <color name="color_bg_tile_progress">#FFFFFF</color>
+    <color name="color_fg_tile_progress">#694DF8</color>
 </resources>
